--- a/view/css/style.css
+++ b/view/css/style.css
@@ -10,6 +10,7 @@ body {
 a {
     text-decoration: none;
     color: var(--font-color);
+    cursor: pointer;
 }
 p {
     font: normal normal normal 16px/40px Source Han Sans JP;
@@ -36,19 +37,18 @@ p {
 }
 /* header -------------------------------------------*/
 header {
-    height: 80px;
+    height: 50px;
     width: 100%;
-    /* position: fixed; */
     background-color: var(--main-color);
+    position: fixed;
 }
 /* mune */
 .menu {
     position: fixed;
     right: -30%;
     width: 30%;
-    height: 70%;
+    height: 100vh;
     margin-left: auto;
-    display: flex;
     flex-direction: column;
     color:var(--main-color);
     background-color: var(--accent-color);
@@ -58,29 +58,30 @@ header {
     font-size: var(--fs020);
 }
 .menu-list {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    list-style:none;
+    padding: 1rem;
+    text-align: center;
 }
-menu-list a {
+.menu-list a {
+    display: block;
+    padding: 1rem;
+    width: auto;
     font-size: var(--fs020);
     color: #fff;
 }
 .btn {
     position: fixed;
-    top: 20px;
-    right: 16px;
-    width: 45px;
-    height: 45px;
-    z-index: 100;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    z-index: 1000;
 }
 .btn-line {
     display: block;
     position: relative;
     width: 100%;
-    height: 4px;
+    height: 3px;
     background-color:#3d3d3d ;
     transition: .2s;
 }
@@ -94,10 +95,10 @@ menu-list a {
     left: 0;
 }
 .btn-line::before {
-    transform: translateY(-16px);
+    transform: translateY(-10px);
 }
 .btn-line::after {
-    transform: translateY(16px);
+    transform: translateY(10px);
 }
 .menu.open {
     right: 0;
@@ -124,6 +125,7 @@ footer {
     padding: 20px 0;
     position: relative;
     display: block;
+    z-index: -1;
 }
 .footer-inner {
     display:flex;
@@ -151,7 +153,6 @@ p.text-light {
     line-height: 1.5;
 }
 .footer-link {
-    padding-top: 165px;
     width: 40vw;
 }
 .footer-btn {
@@ -171,7 +172,21 @@ p.text-light {
     background-color: #fff;
     font-weight: bold;
 }
+.footer-logo {
+    width: inherit;
+}
+.footer-logo img {
+    width: 40vh;
+    display: block;
+    padding: 1rem 0;
+    background-color:var(--accent-color);
+    right: 0;
+}
 .copyright {
+    font-size: var(--fs012);
     bottom: 0; right: 0;
     text-align: left;
+}
+.copyright p {
+    line-height: 1.5;
 }
